<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.proprog.scorekeeperapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:src="@drawable/chelsea" />

                <TextView
                    style="@style/textStyleTeams"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textBlues"
                    android:textColor="@color/colorTeamBlues" />

            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:src="@drawable/mans" />

                <TextView
                    style="@style/textStyleTeams"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textReds"
                    android:textColor="@color/colorTeamReds" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/blues_goalTextView"
                style="@style/textStyleStats"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="55sp"
                android:text="@string/textDefaultStat" />

            <Button
                style="@style/styleButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="center"
                android:onClick="goalForBlues"
                android:text="@string/textPlusButton" />

            <TextView
                style="@style/textStats"
                android:layout_width="0dp"
                android:textSize="22sp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/textGoals" />

            <Button
                style="@style/styleButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="center"
                android:onClick="goalForReds"
                android:text="@string/textPlusButton" />

            <TextView
                android:id="@+id/reds_goalTextView"
                style="@style/textStyleStats"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="55sp"
                android:text="@string/textDefaultStat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/blues_shotTextView"
                style="@style/textStyleStats"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/textDefaultStat" />

            <Button
                style="@style/styleButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="center"
                android:onClick="shotForBlues"
                android:text="@string/textPlusButton" />

            <TextView
                style="@style/textStats"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/textShots" />

            <Button
                style="@style/styleButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="center"
                android:onClick="shotForReds"
                android:text="@string/textPlusButton" />

            <TextView
                android:id="@+id/reds_shotTextView"
                style="@style/textStyleStats"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/textDefaultStat" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/blues_foulTextView"
                style="@style/textStyleStats"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/textDefaultStat" />

            <Button
                style="@style/styleButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="center"
                android:onClick="foulForBlues"
                android:text="@string/textPlusButton" />

            <TextView
                style="@style/textStats"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/textFouls" />

            <Button
                style="@style/styleButtons"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="center"
                android:onClick="foulForReds"
                android:text="@string/textPlusButton" />

            <TextView
                android:id="@+id/reds_foulTextView"
                style="@style/textStyleStats"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/textDefaultStat" />

        </LinearLayout>

    </LinearLayout>

    <Button
        style="@style/styleButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/textReset"
        android:onClick="resetStats"/>
</RelativeLayout>
